public/style.css
/* ... */
.bg-\[\#DD333F\]{
  --tw-bg-opacity: 1;
  background-color: rgb(221 51 63 / var(--tw-bg-opacity));
}

.bg-\[\#E3D3FF\]{
  --tw-bg-opacity: 1;
  background-color: rgb(227 211 255 / var(--tw-bg-opacity));
}

.bg-\[\#F5D76E\]{
  --tw-bg-opacity: 1;
  background-color: rgb(245 215 110 / var(--tw-bg-opacity));
}

.bg-blue{
  --tw-bg-opacity: 1;
  background-color: rgb(116 122 185 / var(--tw-bg-opacity));
}

.bg-classic-purple{
  --tw-bg-opacity: 1;
  background-color: rgb(178 120 255 / var(--tw-bg-opacity));
}

.bg-cli-background{
  --tw-bg-opacity: 1;
  background-color: rgb(38 38 38 / var(--tw-bg-opacity));
}

.bg-code-background{
  --tw-bg-opacity: 1;
  background-color: rgb(245 244 241 / var(--tw-bg-opacity));
}

.bg-dark-gray{
  --tw-bg-opacity: 1;
  background-color: rgb(47 47 47 / var(--tw-bg-opacity));
}

.bg-light-background{
  --tw-bg-opacity: 1;
  background-color: rgb(250 250 250 / var(--tw-bg-opacity));
}

.bg-purple{
  --tw-bg-opacity: 1;
  background-color: rgb(149 91 159 / var(--tw-bg-opacity));
}

.bg-red-300{
  --tw-bg-opacity: 1;
  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
}

.bg-transparent{
  background-color: transparent;
}

.bg-white{
  --tw-bg-opacity: 1;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
}

.bg-white\/70{
  background-color: rgb(255 255 255 / 0.7);
}

.bg-gradient-to-r{
  background-image: linear-gradient(to right, var(--tw-gradient-stops));
}

.from-classic-purple{
  --tw-gradient-from: #B278FF;
  --tw-gradient-to: rgb(178 120 255 / 0);
  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
}

.from-purple{
  --tw-gradient-from: #955B9F;
  --tw-gradient-to: rgb(149 91 159 / 0);
  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
}

.from-transparent{
  --tw-gradient-from: transparent;
  --tw-gradient-to: rgb(0 0 0 / 0);
  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
}

.via-classic-purple{
  --tw-gradient-to: rgb(178 120 255 / 0);
  --tw-gradient-stops: var(--tw-gradient-from), #B278FF, var(--tw-gradient-to);
}

.to-blue{
  --tw-gradient-to: #747AB9;
}

.to-classic-pink{
  --tw-gradient-to: #F56FF0;
}

.to-white{
  --tw-gradient-to: #fff;
}

.bg-clip-text{
  -webkit-background-clip: text;
          background-clip: text;
}

.fill-current{
  fill: currentColor;
}

.p-0{
  padding: 0px;
}

.p-0\.5{
  padding: 0.125rem;
}

.p-2{
  padding: 0.5rem;
}

.p-4{
  padding: 1rem;
}

.p-5{
  padding: 1.25rem;
}

.p-6{
  padding: 1.5rem;
}

.p-8{
  padding: 2rem;
}

.px-1{
  padding-left: 0.25rem;
  padding-right: 0.25rem;
}

.px-1\.5{
  padding-left: 0.375rem;
  padding-right: 0.375rem;
}

.px-12{
  padding-left: 3rem;
  padding-right: 3rem;
}

.px-2{
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.px-20{
  padding-left: 5rem;
  padding-right: 5rem;
}

.px-3{
  padding-left: 0.75rem;
  padding-right: 0.75rem;
}

.px-4{
  padding-left: 1rem;
  padding-right: 1rem;
}

.px-5{
  padding-left: 1.25rem;
  padding-right: 1.25rem;
}

.px-6{
  padding-left: 1.5rem;
  padding-right: 1.5rem;
}

.px-8{
  padding-left: 2rem;
  padding-right: 2rem;
}

.py-0{
  padding-top: 0px;
  padding-bottom: 0px;
}

.py-0\.5{
  padding-top: 0.125rem;
  padding-bottom: 0.125rem;
}

.py-1{
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
}

.py-2{
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

.py-3{
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
}

.py-4{
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.py-8{
  padding-top: 2rem;
  padding-bottom: 2rem;
}

.pb-11{
  padding-bottom: 2.75rem;
}

.pb-3{
  padding-bottom: 0.75rem;
}

.pb-4{
  padding-bottom: 1rem;
}

.pb-5{
  padding-bottom: 1.25rem;
}

.pl-1{
  padding-left: 0.25rem;
}

.pl-11{
  padding-left: 2.75rem;
}

.pl-3{
  padding-left: 0.75rem;
}

.pr-14{
  padding-right: 3.5rem;
}

.pr-2{
  padding-right: 0.5rem;
}

.pr-4{
  padding-right: 1rem;
}

.pt-1{
  padding-top: 0.25rem;
}

.pt-10{
  padding-top: 2.5rem;
}

.text-left{
  text-align: left;
}

.text-center{
  text-align: center;
}

.text-justify{
  text-align: justify;
}

.font-FiraCode{
  font-family: Fira Code, monospace;
}

.font-Quicksand{
  font-family: Quicksand, sans-serif;
}

.font-body{
  font-family: Inter, sans-serif;
}

.text-2xl{
  font-size: 1.5rem;
  line-height: 2rem;
}

.text-3xl{
  font-size: 1.875rem;
  line-height: 2.25rem;
}

.text-4xl{
  font-size: 2.25rem;
  line-height: 2.5rem;
}

.text-7xl{
  font-size: 4.5rem;
  line-height: 1;
}

.text-base{
  font-size: 1rem;
  line-height: 1.5rem;
}

.text-lg{
  font-size: 1.125rem;
  line-height: 1.75rem;
}

.text-sm{
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.text-xl{
  font-size: 1.25rem;
  line-height: 1.75rem;
}

.text-xs{
  font-size: 0.75rem;
  line-height: 1rem;
}

.font-bold{
  font-weight: 700;
}

.font-medium{
  font-weight: 500;
}

.font-normal{
  font-weight: 400;
}

.font-semibold{
  font-weight: 600;
}

.italic{
  font-style: italic;
}

.leading-6{
  line-height: 1.5rem;
}

.\!text-gray-600{
  --tw-text-opacity: 1 !important;
  color: rgb(75 85 99 / var(--tw-text-opacity)) !important;
}

.\!text-white{
  --tw-text-opacity: 1 !important;
  color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
}

.text-\[\#02A5F1\]{
  --tw-text-opacity: 1;
  color: rgb(2 165 241 / var(--tw-text-opacity));
}

.text-\[\#a1b56c\]{
  --tw-text-opacity: 1;
  color: rgb(161 181 108 / var(--tw-text-opacity));
}

.text-black{
  --tw-text-opacity: 1;
  color: rgb(0 0 0 / var(--tw-text-opacity));
}

.text-blue{
  --tw-text-opacity: 1;
  color: rgb(116 122 185 / var(--tw-text-opacity));
}

.text-classic-blue{
  --tw-text-opacity: 1;
  color: rgb(134 193 185 / var(--tw-text-opacity));
}

.text-classic-brown{
  --tw-text-opacity: 1;
  color: rgb(161 136 127 / var(--tw-text-opacity));
}

.text-classic-green{
  --tw-text-opacity: 1;
  color: rgb(161 181 108 / var(--tw-text-opacity));
}

.text-classic-purple{
  --tw-text-opacity: 1;
  color: rgb(178 120 255 / var(--tw-text-opacity));
}
/* ... */

